# LangNet.Agent

./: README.md
LangNet.Agent/: LangNet.Agent.sln
LangNet.Agent/src/LangNet.Agent.Core/: LangNet.Agent.Core.csproj
src/python_agent/: .gitignore  Dockerfile  README.md  pyproject.toml
src/python_agent/src/agent/: __init__.py  app.py  client.py  service.py
src/python_agent/tests/: test_agent.py
