[project]
name = "langnet-agent-python"
version = "0.1.0"
description = "Minimal Python implementation of LangNet.Agent features: modular agent, RAG, and FastAPI gateway."

authors = [{ name = "Generated" }]

dependencies = [
	"fastapi>=0.95.0",
	"uvicorn[standard]>=0.22.0",
	"python-multipart>=0.0.6",
	"python-dotenv>=1.0.0",
	"httpx>=0.24.0",
	"scikit-learn>=1.3.0",
	"numpy>=1.26.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
